<resources>
    <string name="app_name">Leedo</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="app_name_login_screen">Leedo</string>
    <string name="facebook_app_id">2437483646282269</string>
    <string name="fb_login_protocol_scheme">fb2437483646282269</string>
    <string name="title_activity_student_navigation">StudentNavigationActivity</string>
    <string name="razorPay_test_key">rzp_test_wN44N3LJbzWHQd</string>
    <string name="razorPay_test_key_secrete">TJkCPNcMcCZIdW7gzXy1Y2AR</string>
    <string name="razorPay_live_key">rzp_live_sbmcHXsJO1YdBQ</string>
    <string name="razorPay_live_key_secrete">tJ6G1b0C7yI4ASZ8C5brDkpm</string>
    <string name="hash"># &amp;</string>
    <string name="str_concat_two_strings">%1$s %2$s</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_content">Loading content…</string>
    <string name="hang_on_loading_content">Hang on, Loading content…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="Continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="do_you_want_to_logout">Do you want to logout from app?</string>
    <string name="do_you_want_to_exit_form">Do you want to exit from this form?</string>
    <string name="ok">Ok</string>
    <string name="message">Message</string>
    <string name="app_exit_msg">Please click BACK again to exit!</string>
    <string name="digits_username">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="unknown_error_try_again">Unknown error occurred! Please try again.</string>
    <string name="server_error_msg">A temporary server error has occurred. Please try again.</string>
    <string name="something_went_wrong_try_again">Something went wrong! Please try again.</string>
    <string name="no_project_assigned">No Projects Assigned!</string>
    <string name="no_users_assigned">No Users Created!</string>
    <string name="no_details_found">No details found!</string>
    <string name="login_caps">LOGIN</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="discard_reg_msg">Going back screen will discard your registration. Do you really want to discard registration?</string>
    <string name="discard">Discard</string>
    <string name="keep">Keep</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="Sort">Sort</string>
    <string name="Filter">Filter</string>
    <string name="search">Search</string>
    <string name="search_reminder">Search Reminder</string>
    <string name="search_by">SearchBy</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="new_password_hint">Enter New Password</string>
    <string name="confirm_password_hint">Enter Confirm Password</string>
    <string name="change_password_hint">changing password…</string>
    <string name="enter_email_hint">Enter Email Address</string>
    <string name="submit">Submit</string>
    <string name="na">NA</string>
    <string name="location">Location</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="title">Title</string>
    <string name="ind_countryCode">+91</string>
    <string name="user_information">User Information</string>
    <string name="user_name">User name</string>
    <string name="user_mobile">User mobile</string>
    <string name="user_email">User email</string>
    <string name="next">Next</string>
    <string name="hint_enter_email_verification_otp">Enter email verification otp</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_confirm_password">Enter confirm password</string>
    <string name="change_password">Change Password</string>
    <string name="retryOTP_text">In case you didn\'t received OTP, retry here</string>
    <string name="enter_yourOTP">Enter your OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resending_otp">Resending OTP…</string>
    <string name="updating_password">Updating password…</string>
    <string name="transition_string">hello</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="addNew">Add New</string>
    <string name="holdNew">Hold New</string>
    <string name="select_flat_on_hold">Select Unit On Hold</string>
    <string name="select">Select</string>
    <string name="feeds">Feeds</string>
    <string name="reminders">Reminders</string>
    <string name="reminder">Reminder</string>
    <string name="address">Address</string>
    <string name="selectUsing">Select Using</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="documents">Documents</string>
    <string name="cleartext_communication_not_permitted">Unknown or Unsecured Network URL! ClearText HTTP traffic not permitted!</string>
    <string name="connection_time_out">Connection Time out. Please try again!</string>
    <string name="weak_connection">Weak Internet Connection! Please try again!</string>
    <string name="_0">0</string>
    <string name="updateReminder">Update Reminder</string>
    <string name="mob_number_exists">Entered mobile number already exists!</string>
    <string name="mobile_number_verified_success">Mobile number verified successfully!</string>
    <string name="verify">Verify</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="sending_otp">Sending OTP…</string>
    <string name="email">Email</string>
    <string name="re_sending_otp">Re-Sending OTP…</string>
    <string name="verifying">Verifying…</string>
    <string name="mdp_day" translatable="false">D</string>
    <string name="mdp_month" translatable="false">M</string>
    <string name="mdp_year" translatable="false">Y</string>
    <string name="def_mob_number">9876543210</string>
    <string name="def_best_service_time">40 minutes</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="file_writePerm_grant">File write permission granted successfully!</string>
    <string name="permission_grant_success">Permission granted successfully!</string>
    <string name="camera_permission_rationale">"Camera permissions is needed for capturing image through camera!"</string>
    <string name="gallery_permission_rationale">"Gallery read permissions is needed for selecting image through gallery!"</string>
    <string name="file_permissionRationale">File read write permission is needed for app to proceed!</string>
    <string name="call_permissionRationale">Call permission is required to make a phone call!</string>
    <string name="audio_permissionRationale">Record Audio permission is required to make a speech input!</string>
    <string name="calendar_permissionRationale">Calendar read write permission is needed for app to proceed!</string>
    <string name="mobile_no_hint">Enter mobile number</string>
    <string name="email_hint">Enter email address</string>
    <string name="password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_use_website_for_login">Please use website for login!</string>
    <string name="don_t_have_an_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_caps">REGISTER NOW</string>
    <string name="register_now">Register Now</string>
    <string name="signing_in">Signing in…</string>
    <string name="registering_user">Registering user…</string>
    <string name="selectDocument">Select Document</string>
    <string name="file_picker_app_name" translatable="false">MaterialFilePicker</string>
    <string name="action_close">Close</string>
    <string name="empty_directory_hint">No Document in this Directory</string>
    <string name="menu">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_unclaimed_leads">UnClaimed Leads</string>
    <string name="menu_blocks_for_open_sale">Blocks for Open Sale</string>
    <string name="menu_teamLeadStats">Team Lead Stats</string>
    <string name="menu_team_stats">Team Stats</string>
    <string name="menu_team_list">Team Lead List</string>
    <string name="menu_lead_re_assign">Lead Re-Assign</string>
    <string name="menu_cp_fos_report">CP Wise FOS Reports</string>
    <string name="menu_booking_events">Booking Events</string>
    <string name="menu_my_performance">My Performance</string>
    <string name="menu_send">Send</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_sales_executive">Sales Executive List</string>
    <string name="menu_salesHeadDashboard">Lead Summary Report</string>
    <string name="menu_claimed_leads">Claimed Leads</string>
    <string name="menu_ghp_List">GHP Leads List</string>
    <string name="menu_teamLeaderDashboard">Team Leader Dashboard</string>
    <string name="leads">Leads</string>
    <string name="mobile_no">Mobile number</string>
    <string name="call_now">Call Now</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="menu_generate_ghp">Generate GHP/GHP+</string>
    <string name="view_ghp">View GHP/GHP+ Details</string>
    <string name="lead_name">Lead Name</string>
    <string name="project_name">Project Name</string>
    <string name="my_performance">My Performance</string>
    <string name="performance">Performance</string>
    <string name="direct_allotment">Mark As Booked</string>
    <string name="remarks_ifAny">Remark (if any)</string>
    <string name="release_flat">Release Unit</string>
    <string name="cancel_allotment_">Cancel Booking</string>
    <string name="continue_allotment">Continue Allotment</string>
    <string name="view_hold_flat">View Hold Unit</string>
    <string name="menu_allottedFlats">Allotted Units</string>
    <string name="menu_holdFlats">Hold Units</string>
    <string name="add_call_schedule">Add Call Schedule</string>
    <string name="not_now">Not Now</string>
    <string name="call">Call</string>
    <string name="msg_call_scheduled_lead">You have  scheduled call log for the lead :</string>
    <string name="site_visit_stats">Site Visit Stats</string>
    <string name="remarks__">Remarks :</string>
    <string name="all_projects">All Projects</string>
    <string name="menu_leads">Leads</string>
    <string name="menu_call_recordings">Call Recordings</string>
    <string name="menu_project_brochures">Project Brochures</string>
    <string name="menu_project_floor_plans">Project Floor Plans</string>
    <string name="menu_quotations">Project Quotations</string>
    <string name="menu_site_visitList">Site Visits</string>
    <string name="menu_booked_customers">Booked Customers</string>
    <string name="menu_user_list">All Users</string>
    <string name="menu_all_call_logs">All Call Logs</string>
    <string name="menu_all_reminders">All Reminders</string>
    <string name="add_site_visit">Add Site Visit</string>
    <string name="add_call_log">Add Call Log</string>
    <string name="reports">Reports</string>
</resources>