<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bNav_salesPerson_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/menu" />

    <item
        android:id="@+id/bNav_salesPerson_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/feeds" />


    <item
        android:id="@+id/bNav_salesPerson_leads"
        android:icon="@drawable/ic_people_black_24dp"
        android:visible="false"
        android:title="@string/leads" />

    <item
        android:id="@+id/bNav_salesPerson_myPerformance"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/performance" />

   <!-- <item
        android:id="@+id/bNav_salesPerson_bookings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:visible="false"
        android:title="@string/bookings" />-->

    <item
        android:id="@+id/bNav_salesPerson_reminders"
        android:icon="@drawable/ic_reminder_bottom_sheet"
        android:title="@string/reminder" />




</menu>
